app/assets/stylesheets/_embedly.css.sass
.embedly
  text-align: left
  img
    width: auto
    height: auto
    max-width: 100%
  .thumb
    width: auto
    max-width: 16%
    min-width: 16%
    margin-right: 4%
    max-height: 12em
    height: auto
    padding: 3px
    background: white
    float: left
    border: 1px solid #f0f0f0
    -webkit-box-shadow: 0 8px 8px -8px rgba(0,0,0,0.2)
    -moz-box-shadow: 0 8px 8px -8px rgba(0,0,0,0.2)
    box-shadow: 0 8px 8px -8px rgba(0,0,0,0.2)
  a:not(.provider)
    font-size: 1.333333333em
    text-decoration: none
    font-weight: 600
    line-height: 1.2
    &:hover
      text-decoration: underline
  .provider
    display: none
    visibility: hidden
  .description
    margin-top: 0.5em
    padding: 0
    font-size: 1em
    max-width: 80%
    float: right
  @include respond-to(xsmall)
    a:not(.provider)
      font-size: 1em
    .description
      max-width: 100%
      float: none
      padding: 0
      font-size: 0.888888889em

.embedly-comment img
  width: 300

